--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlaskApp</title>
+    <title>Waiting media</title>
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <style>
         #medias {
             font-family: Arial, Helvetica, sans-serif;
