--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -31,6 +31,39 @@
             background-color: #04AA6D;
             color: white;
         }
+
+        @media (prefers-color-scheme: dark) {
+            body {
+                color: #eee;
+                background: #121212;
+            }
+
+            a:link {
+                color: lightskyblue;
+            }
+
+            a:visited {
+                color: #6d4b8d;
+            }
+
+            a:hover {
+                color: #ffffff;
+            }
+
+            a:active {
+                color: #ff4040;
+                text-decoration: none;
+                font-weight: normal;
+            }
+
+            #medias tr:nth-child(even) {
+                background-color: #303030;
+            }
+
+            #medias tr:hover {
+                background-color: #606060;
+            }
+        }
     </style>
 </head>
 <body>
