--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,31 +5,40 @@
     <title>Waiting media</title>
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <style>
-        #medias {
+        table {
             font-family: Arial, Helvetica, sans-serif;
             border-collapse: collapse;
             width: 100%;
         }
 
-        #medias td, #medias th {
+        td, th {
             border: 1px solid #ddd;
             padding: 8px;
         }
 
-        #medias tr:nth-child(even) {
+        td.center, th.center {
+            text-align: center;
+        }
+
+        tr:nth-child(even) {
             background-color: #f2f2f2;
         }
 
-        #medias tr:hover {
+        tr:hover {
             background-color: #ddd;
         }
 
-        #medias th {
+        th {
             padding-top: 12px;
             padding-bottom: 12px;
             text-align: left;
             background-color: #04AA6D;
             color: white;
+        }
+
+        img.icon {
+            max-width: 20px;
+            transform: translate(0%, 15%);
         }
 
         @media (prefers-color-scheme: dark) {
@@ -56,11 +65,11 @@
                 font-weight: normal;
             }
 
-            #medias tr:nth-child(even) {
+            tr:nth-child(even) {
                 background-color: #303030;
             }
 
-            #medias tr:hover {
+            tr:hover {
                 background-color: #606060;
             }
         }
@@ -70,33 +79,37 @@
 <table id="medias">
     <thead>
     <tr>
-        <th>User group</th>
-        <th>Type</th>
-        <th>Season</th>
-        <th>Name</th>
-        <th>Status</th>
-        <th>Links</th>
+        <th class="center"></th>
+        <th class="center">User group</th>
+        <th class="center">Type</th>
+        <th class="center">Season</th>
+        <th class="center">Name</th>
+        <th class="center">Status</th>
+        <th class="center">Links</th>
+        <th class="center">ID</th>
     </tr>
     </thead>
     <tbody>
     {% for user_group, medias in media_data.items() %}
     {% for media in medias %}
     <tr>
-        <td> {{ user_group.name }}</td>
-        <td> {{ media.type.name }}</td>
-        <td> {{ media.season_number or '' }}</td>
-        <td> {{ media.name }}</td>
-        <td> {{ media.status.name | replace('FINISHED','') }}</td>
-        <td>
+        <td>{{ loop.index }}</td>
+        <td>{{ user_group.name }}</td>
+        <td><img class="icon" alt="{{ media.type.name }} icon" src="{{ url_for('static', filename=media.type.get_icon() )}}"/> {{ media.type.get_for_display(locale) or '' }}</td>
+        <td class="center">{{ media.season_number or '' }}</td>
+        <td>{{ media.name }}</td>
+        <td class="center">{{ media.status.get_for_display(locale) or '' }}</td>
+        <td class="center">
             {% if url_data[media.overseerr_id] is not none %}
             {% if url_data[media.overseerr_id].overseerr is not none %}
-            <a href="{{url_data[media.overseerr_id].overseerr}}">Overseerr</a>
+            <a href="{{url_data[media.overseerr_id].overseerr}}"><img class="icon" alt="Overseerr icon" src="{{ url_for('static', filename='overseerr.png' )}}"/></a>
             {% endif %}
             {% if url_data[media.overseerr_id].plex_web is not none %}
-            <a href="{{url_data[media.overseerr_id].plex_web}}">Plex Web</a>
+            <a href="{{url_data[media.overseerr_id].plex_web}}"><img class="icon" alt="Plex web icon" src="{{ url_for('static', filename='plex.png' )}}"/></a>
             {% endif %}
             {% endif %}
         </td>
+        <td>{{ media.id }}</td>
     </tr>
     {% endfor %}
     {% endfor %}
