--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -105,8 +105,8 @@
         <th class="center">User group</th>
         <th class="center"></th>
         <th class="center">Type</th>
-        <th class="center">Season</th>
         <th class="center">Name</th>
+        <th class="center">Season</th>
         <th class="center">Status</th>
         <th class="center">Links</th>
         <th class="center">ID</th>
@@ -120,9 +120,12 @@
         <td class="row-group" rowspan="{{ medias | length }}">{{user_group.name}}</td>
         {% endif %}
         <td>{{ loop.index }}</td>
-        <td><img class="icon bw-icon" alt="{{ media.type.name }} icon" src="{{ url_for('static', filename=media.type.get_icon() )}}"/> {{ media.type.get_for_display(locale) or '' }}</td>
-        <td class="center">{{ media.season_number or '' }}</td>
+        <td>
+            <img class="icon bw-icon" alt="{{ media.type.name }} icon" src="{{ url_for('static', filename=media.type.get_icon() )}}"/>
+            {{ media.type.get_for_display(locale) or '' }}
+        </td>
         <td>{{ media.name }}</td>
+        <td class="center">{{ media.season_number or '' }}</td>
         <td class="center">{{ media.status.get_for_display(locale) or '' }}</td>
         <td class="center">
             {% if url_data[media.overseerr_id] is not none %}
