--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,7 +37,7 @@
         }
 
         img.icon {
-            max-width: 20px;
+            max-height: 15px;
             transform: translate(0%, 15%);
         }
 
