--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -88,6 +88,10 @@
                 background-color: #606060;
             }
 
+            tr.first-group {
+                border-top: 2px solid white;
+            }
+
             img.bw-icon {
                 filter: invert(1);
             }
