--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -52,6 +52,10 @@
             background-color: white;
         }
 
+        .ready-delete, .ready-delete > td {
+            background-color: #fa7a7a;
+        }
+
         tr.first-group {
             border-top: 2px solid black;
         }
@@ -95,9 +99,13 @@
             img.bw-icon {
                 filter: invert(1);
             }
-            
+
             .row-group {
                 background-color: #121212;
+            }
+
+            .ready-delete, .ready-delete > td {
+                background-color: #872222 !important;
             }
         }
     </style>
@@ -119,7 +127,7 @@
     <tbody>
     {% for user_group, medias in media_data.items() %}
     {% for media in medias %}
-    <tr class="{{ 'first-group' if loop.index == 1 }}">
+    <tr class="{{ 'first-group ' if loop.index == 1 }}{{ 'ready-delete ' if user_group.id == -1 }}">
         {% if loop.index == 1 %}
         <td class="row-group" rowspan="{{ medias | length }}">{{user_group.name}}</td>
         {% endif %}
