New auth system

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,120 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Waiting media</title>
-    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
-    <style>
-        table {
-            font-family: Arial, Helvetica, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        td, th {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-
-        td.center, th.center {
-            text-align: center;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        tr:hover {
-            background-color: #ddd;
-        }
-
-        th {
-            padding-top: 12px;
-            padding-bottom: 12px;
-            text-align: left;
-            background-color: #04AA6D;
-            color: white;
-        }
-
-        img.icon {
-            max-height: 15px;
-            transform: translate(0%, 15%);
-        }
-
-        .row-group {
-            writing-mode: vertical-rl;
-            text-align: center;
-            vertical-align: middle;
-            transform: rotate(180deg);
-            width: 30px;
-            line-height: 30px;
-            font-size: 20px;
-            background-color: white;
-        }
-
-        tr.ready-delete, tr.ready-delete > td {
-            background-color: #fa7a7a;
-        }
-
-        tr.releasing {
-            background-color: #69d960;
-        }
-
-        tr.first-group {
-            border-top: 2px solid black;
-        }
-
-        @media (prefers-color-scheme: dark) {
-            body {
-                color: #eee;
-                background: #121212;
-            }
-
-            a:link {
-                color: lightskyblue;
-            }
-
-            a:visited {
-                color: #6d4b8d;
-            }
-
-            a:hover {
-                color: #ffffff;
-            }
-
-            a:active {
-                color: #ff4040;
-                text-decoration: none;
-                font-weight: normal;
-            }
-
-            tr:nth-child(even) {
-                background-color: #303030;
-            }
-
-            tr:hover {
-                background-color: #606060;
-            }
-
-            tr.first-group {
-                border-top: 2px solid white;
-            }
-
-            img.bw-icon {
-                filter: invert(1);
-            }
-
-            .row-group {
-                background-color: #121212;
-            }
-
-            tr.ready-delete, tr.ready-delete > td {
-                background-color: #872222;
-            }
-
-            tr.releasing {
-                background-color: #568722;
-            }
-        }
-    </style>
+    <link rel="icon" href="/static/favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="stylesheet" href="/static/main.css">
 </head>
 <body>
 <table id="medias">
