--- a/src/static/main.css
+++ b/src/static/main.css
@@ -35,14 +35,17 @@ img.icon {
 }
 
 .row-group {
-    writing-mode: vertical-lr;
     text-align: center;
     vertical-align: middle;
-    transform: rotate(180deg);
     width: 30px;
     line-height: 30px;
     font-size: 20px;
     background-color: white;
+}
+
+.row-group > span {
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
 }
 
 tr.ready-delete {
