--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -1,4 +1,4 @@
 <div th:fragment="navbar" class="topnav">
-    <a th:href="@{/}">Media list</a>
-    <a th:href="@{/logout}">Logout</a>
+    <a th:href="@{/}" th:text="#{web.navbar.media-list}"></a>
+    <a th:href="@{/logout}" th:text="#{web.navbar.logout}"></a>
 </div>
