--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,12 +1,96 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title>PlexDeleter</title>
+    <title th:value="#{web.navbar.media-list}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link th:href="@{/static/styles/base.css}" rel="stylesheet"/>
     <link th:href="@{/static/favicon.png}" rel="icon" type="image/png"/>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous"/>
 </head>
 <body>
 <div th:replace="~{fragment/navbar.html::navbar}"></div>
+<div sec:authorize="hasRole('ROLE_ADMIN')" th:with="medias=${userService.getSoonDeletedMedias()}">
+    <div th:unless="${#lists.isEmpty(medias)}">
+        <h2 th:text="#{web.media-list.soon-removed.header}"/>
+        <table class="table table-striped table-bordered table-hover">
+            <thead class="thead-light">
+            <tr>
+                <th scope="col"></th>
+                <th scope="col" th:text="#{web.media-list.table.type}"/>
+                <th scope="col" th:text="#{web.media-list.table.name}"/>
+                <th scope="col" th:text="#{web.media-list.table.season}"/>
+                <th scope="col" th:text="#{web.media-list.table.count}"/>
+                <th scope="col" th:text="#{web.media-list.table.availability}"/>
+                <th scope="col">Overseerr</th>
+                <th scope="col" th:text="#{web.media-list.table.id}"/>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="media,iter : ${medias}">
+                <th scope="row" th:text="${iter.index}"></th>
+                <td>
+                    <img class="icon align-middle" th:alt="${media.getType()}" th:src="@{/static/__${media.getType().getIcon()}__}"/>
+                    <th:block th:text="#{${media.getType().getLocalizationKey()}}"></th:block>
+                </td>
+                <td th:text="${media.getName()}"></td>
+                <td th:text="${media.getIndex()}"></td>
+                <td th:text="${media.getPartsCount()}"></td>
+                <td th:text="#{${media.getAvailability().getLocalizationKey()}}"></td>
+                <td>
+                    <th:block th:if="${media.getOverseerrId()}">
+                        <a th:href="${userService.getMediaOverseerrUrl(media)}" th:target="_blank">
+                            <img class="icon" alt="Overseerr logo" th:src="@{/static/overseerr.png}"/>
+                        </a>
+                    </th:block>
+                </td>
+                <td th:text="${media.getId()}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div th:with="medias=${userService.getUserMedias(#authorization.authentication)}">
+    <div th:unless="${#lists.isEmpty(medias)}">
+        <h2 th:text="#{web.media-list.watch-list.header}"/>
+        <table class="table table-striped table-bordered table-hover">
+            <thead class="thead-light">
+            <tr>
+                <th scope="col"></th>
+                <th scope="col" th:text="#{web.media-list.table.type}"/>
+                <th scope="col" th:text="#{web.media-list.table.name}"/>
+                <th scope="col" th:text="#{web.media-list.table.season}"/>
+                <th scope="col" th:text="#{web.media-list.table.count}"/>
+                <th scope="col" th:text="#{web.media-list.table.availability}"/>
+                <th scope="col">Overseerr</th>
+                <th scope="col" th:text="#{web.media-list.table.id}"/>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="media,iter : ${medias}" th:class="${media.getAvailability().isAvailable() ? 'table-success' : 'media-not-available'}">
+                <th scope="row" th:text="${iter.index}"></th>
+                <td>
+                    <img class="icon align-middle" th:alt="${media.getType()}" th:src="@{/static/__${media.getType().getIcon()}__}"/>
+                    <th:block th:text="#{${media.getType().getLocalizationKey()}}"></th:block>
+                </td>
+                <td th:text="${media.getName()}"></td>
+                <td th:text="${media.getIndex()}"></td>
+                <td th:text="${media.getPartsCount()}"></td>
+                <td th:text="#{${media.getAvailability().getLocalizationKey()}}"></td>
+                <td>
+                    <th:block th:if="${media.getOverseerrId()}">
+                        <a th:href="${userService.getMediaOverseerrUrl(media)}" th:target="_blank">
+                            <img class="icon" alt="Overseerr logo" th:src="@{/static/overseerr.png}"/>
+                        </a>
+                    </th:block>
+                </td>
+                <td th:text="${media.getId()}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
 </html>
