--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -52,7 +52,7 @@
         </table>
     </div>
 </div>
-<div th:with="medias=${userService.getUserMedias(#authorization.authentication)}">
+<div th:with="medias=${userService.getUserMedias(person)}">
     <div th:unless="${#lists.isEmpty(medias)}">
         <h2 th:text="#{web.media-list.watch-list.header}"/>
         <table class="table table-striped table-bordered table-hover">
@@ -66,6 +66,7 @@
                 <th scope="col" th:text="#{web.media-list.table.availability}"/>
                 <th scope="col">Overseerr</th>
                 <th scope="col" th:text="#{web.media-list.table.id}"/>
+                <th scope="col" th:text="#{web.media-list.table.abandon}"/>
             </tr>
             </thead>
             <tbody>
@@ -87,6 +88,13 @@
                     </th:block>
                 </td>
                 <td th:text="${media.getId()}"></td>
+                <td>
+                    <form th:action="@{/api/user/media-requirement/abandon}" method="post">
+                        <label for="media" th:text="#{web.media-list.table.abandon}" hidden/>
+                        <input id="media" type="hidden" name="media" class="form-control" th:value="${media.getId()}"/>
+                        <input type="submit" th:value="#{web.media-list.table.abandon}" class="btn btn-danger"/>
+                    </form>
+                </td>
             </tr>
             </tbody>
         </table>
