--- a/src/main/resources/templates/auth/plex.html
+++ b/src/main/resources/templates/auth/plex.html
@@ -12,7 +12,7 @@
 <div class="container-fluid text-center">
     <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
         <div th:if="${param.error}">
-            <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+            <p class="text-danger" th:text="${param.error}"/>
         </div>
         <div th:if="${param.logout}">
             <p class="text-warning" th:text="#{web.auth.logged-out}"/>
