--- a/src/main/resources/templates/admin/media-requirement/list.html
+++ b/src/main/resources/templates/admin/media-requirement/list.html
@@ -17,7 +17,6 @@
     <table class="table table-striped table-bordered table-hover">
         <thead class="thead-light">
         <tr>
-            <th scope="col"></th>
             <th scope="col" th:text="#{web.media-list.table.user}"/>
             <th scope="col" th:text="#{web.media-list.table.type}"/>
             <th scope="col" th:text="#{web.media-list.table.name}"/>
@@ -29,8 +28,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="requirement,iter : ${requirements}" th:class="${requirement.getMedia().getAvailability().isAvailable() ? 'table-success' : 'media-not-available'}">
-            <th scope="row" th:text="${iter.index}"></th>
+        <tr th:each="requirement : ${requirements}" th:class="${requirement.getMedia().getAvailability().isAvailable() ? 'table-success' : 'media-not-available'}">
             <td th:text="${requirement.getGroup().getName()}"></td>
             <td>
                 <img class="icon align-middle" th:alt="${requirement.getMedia().getType()}" th:src="@{/static/__${requirement.getMedia().getType().getIcon()}__}"/>
