Fix page titles

--- a/src/main/resources/templates/admin/media-requirement/abandon.html
+++ b/src/main/resources/templates/admin/media-requirement/abandon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title th:value="#{web.navbar.admin.requirement.abandon}"></title>
+    <title th:text="#{web.navbar.admin.requirement.abandon}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link th:href="@{/static/styles/base.css}" rel="stylesheet"/>
     <link th:href="@{/static/favicon.png}" rel="icon" type="image/png"/>
