--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title th:value="#{web.navbar.media-list}"></title>
+    <title th:text="#{web.navbar.media-list}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link th:href="@{/static/styles/base.css}" rel="stylesheet"/>
     <link th:href="@{/static/favicon.png}" rel="icon" type="image/png"/>
