Fix JPA links & page links

--- a/src/main/resources/templates/admin/media-requirement/list.html
+++ b/src/main/resources/templates/admin/media-requirement/list.html
@@ -3,6 +3,7 @@
 <head>
     <title th:text="#{web.navbar.admin.requirement.list}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link th:href="@{/static/styles/base.css}" rel="stylesheet"/>
     <link th:href="@{/static/favicon.png}" rel="icon" type="image/png"/>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
