--- a/src/main/resources/static/styles/base.css
+++ b/src/main/resources/static/styles/base.css
@@ -1,28 +1,4 @@
-.topnav {
-    background-color: #333;
-    overflow: hidden;
-}
-
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-}
-
-img.icon {
-    max-height: 15px;
-    transform: translate(0%, 15%);
+svg.icon {
+    max-height: 16px;
+    max-width: 16px;
 }
