--- a/src/main/resources/templates/auth/error.html
+++ b/src/main/resources/templates/auth/error.html
@@ -2,21 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title th:text="#{web.auth.login-error}"></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link th:href="@{/static/styles/base.css}" rel="stylesheet"/>
-    <link th:href="@{/static/favicon.png}" rel="icon" type="image/png"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-          crossorigin="anonymous"/>
+    <script th:replace="~{fragment/common-head::common-head}"></script>
+    <meta http-equiv="refresh" content="3; url=/"/>
 </head>
 <body>
-<div class="container-fluid text-center">
-    <h2 class="text-danger" th:text="#{web.auth.error.header}"></h2>
-    <div th:if="${param.error}">
-        <p class="text-danger" th:text="${param.error}"/>
+<div class="d-flex justify-content-center align-items-center vh-100 text-center">
+    <div class="alert alert-danger d-flex align-items-center" role="alert">
+        <span th:text="${param.error}"></span>
+        <a th:href="@{/auth}" role="button" class="btn btn-warning" th:text="#{web.auth.error.back}"></a>
     </div>
-    <h3><a th:href="@{/auth}" th:text="#{web.auth.error.back}"></a></h3>
 </div>
 </body>
 </html>
