--- a/src/main/resources/templates/auth/success.html
+++ b/src/main/resources/templates/auth/success.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title th:text="#{web.auth.login-success}"></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link th:href="@{/static/styles/base.css}" rel="stylesheet"/>
-    <link th:href="@{/static/favicon.png}" rel="icon" type="image/png"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-          crossorigin="anonymous"/>
+    <script th:replace="~{fragment/common-head::common-head}"></script>
     <meta http-equiv="refresh" content="3; url=/"/>
 </head>
 <body>
-<div sec:authorize="isAuthenticated()" class="container-fluid text-center">
-    <h2 class="text-success" th:text="#{web.auth.success.header}"></h2>
+<div class="d-flex justify-content-center align-items-center vh-100 text-center">
+    <div th:text="#{web.auth.success.header}" class="alert alert-success fs-1" role="alert"></div>
 </div>
 </body>
 </html>
